done with rider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   unicons: ^2.1.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
+  geolocator: ^10.1.0
+  flutter_map: ^6.0.1
 
 dev_dependencies:
   flutter_test:
